Regression: Dirty Vertex Color, Invert, Levels, HSV, Brightness-Contrast ignores destination Color Attribute selection (also crash) #98975

Closed
opened 2022-06-18 16:10:04 +02:00 by Tobias Reich · 12 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 3.1.0

Short description of error
Blender ignores chosen destination attribute for the Dirty Vertex Colors and Smooth Vertex Colors operators. Instead to selected attribute it writes to first Color Attribute in the list.
Using the Invert, Levels, Hue Saturation Value or Bright/Contrast operators either does the same or crashes blender.

Exact steps for others to reproduce the error
Select the monkey
Select the Color Attribute Color.001
Go to Paint → Dirty Vertex Colors
Blender will write color information to "Color".

Likely related to https://developer.blender.org/T98861

vert_col_dirty_HSV_etc.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 3.1.0 **Short description of error** Blender ignores chosen destination attribute for the Dirty Vertex Colors and Smooth Vertex Colors operators. Instead to selected attribute it writes to first Color Attribute in the list. Using the Invert, Levels, Hue Saturation Value or Bright/Contrast operators either does the same or crashes blender. **Exact steps for others to reproduce the error** Select the monkey Select the Color Attribute Color.001 Go to Paint → Dirty Vertex Colors Blender will write color information to "Color". Likely related to https://developer.blender.org/T98861 [vert_col_dirty_HSV_etc.blend](https://archive.blender.org/developer/F13196396/vert_col_dirty_HSV_etc.blend)
Author

Added subscriber: @Morgoth_Bauglyr

Added subscriber: @Morgoth_Bauglyr

#98861 was marked as duplicate of this issue

#98861 was marked as duplicate of this issue
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Might be related to #98960 as well.
I will not merge this to #98861 until we are sure they are the same core issue.

Might be related to #98960 as well. I will not merge this to #98861 until we are sure they are the same core issue.
Member

Added subscribers: @JosephEagar, @lichtwerk

Added subscribers: @JosephEagar, @lichtwerk
Member

Invert , Levels, Hue etc. also crash in this file.

Raising prio

CC @JosephEagar

Invert , Levels, Hue etc. also crash in this file. Raising prio CC @JosephEagar
Philipp Oeser changed title from Dirty Vertex Color, Invert, Levels, HSV, Brightness-Contrast ignores destination Color Attribute selection to Regression: Dirty Vertex Color, Invert, Levels, HSV, Brightness-Contrast ignores destination Color Attribute selection (also crash) 2022-06-20 18:14:12 +02:00
Member

Added subscribers: @silex, @mano-wii, @HooglyBoogly

Added subscribers: @silex, @mano-wii, @HooglyBoogly
Hans Goudey self-assigned this 2022-06-20 21:07:10 +02:00
Member

I'll work on this.

I'll work on this.

This issue was referenced by 81eac17737

This issue was referenced by 81eac17737da467b3c10974c4dc03dd85e0fc622

This issue was referenced by 2eba15d3e8

This issue was referenced by 2eba15d3e862fdf112edda6b26b7e1535f0fdb07
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98975
No description provided.